--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
@@ -110,7 +110,7 @@
                     </div>
                     <div class="row">
                       <div class="buttons padd-15">
-                        <a href="https://drive.google.com/file/d/1D5zOumlRLPJlTtMmSXBofr2NZBgv3iQr/view?usp=sharing" target="_blank"class="btn">Download CV</a>
+                        <a href="https://drive.google.com/file/d/1Bk6_CPR_IvxcVpeGe-Z2F2ZnvwKH5JHu/view?usp=sharing" download target="_blank"class="btn">Download CV</a>
                       </div>
                     </div>
                   </div>
@@ -317,9 +317,23 @@
             </div>
             <div class="row">
               <!-- Project Item -->
-
-              <!-- Project Item End -->
-              <!-- Project Item -->
+              <div class="project-item padd-15">
+                <div class="project-item-inner shadow-dark">
+                  <div class="project-img">
+                    <img src="https://images.pexels.com/photos/1149137/pexels-photo-1149137.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
+                  </div>
+                  <div class="project-info">
+                    <h4 class="project-title">Car Avoidance Game</h4>
+                    <p class="project-description">Used HTML, CSS and JavaScript to build the project. Used JavaScript for animations and
+                      functionalities. Also, I have used Canva to draw the background image. It also counts your scores.
+                      I have added a replay button which shows up when the game finishes (when you hit another car).
+                    </p>
+                    <div class="buttons">
+                      <a href="https://pushpakumari5117.github.io/carAvoidanceGame/" class="btn">View Project</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
               <div class="project-item padd-15">
                 <div class="project-item-inner shadow-dark">
                   <div class="project-img">
@@ -328,16 +342,19 @@
                   <div class="project-info">
                     <h4 class="project-title">Portfolio Website</h4>
                     <p class="project-description">Used HTML, CSS and JavaScript to build the project. It has different
-                      pages like Home page, About page, Projects page etc. It has light and dark mode options, and many
-                      theme colour options like red, green etc.Its Mobile friendly also.
+                      pages like Home page, About page, Projects page and Contact page. It has light and dark mode options. Also, it has many
+                      theme colour options like red, green, blue, yellow and purple. It's Mobile and Tablet friendly also.
                     </p>
                     <div class="buttons">
-                      <a href="#" class="btn">View Project</a>
+                      <a href="https://pushpakumari5117.github.io/pushpaPortfolio/" class="btn">View Project</a>
                     </div>
                   </div>
                 </div>
-              </section>
-              <!-- Project Item End -->
+              </div>
+            </div>
+          </div>
+        </section>
+          <!-- Project Item End -->
               <!-- Contact Section -->
                 <section class="contact section" id="contact">
                   <div class="container">
