Fix: resturctured the folder strcture

--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="utf-8">
     <title>Pushpa Kumari Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="style.css" type="text/css">
-    <link rel="stylesheet" href="red.css" type="text/css">
+    <link rel="stylesheet" href="./assets/style/style.css" type="text/css">
+    <link rel="stylesheet" href="./assets/style/red.css" type="text/css">
     <!-- Theme Switcher -->
-    <link rel="stylesheet" title="purple" class="alternate-style" href="purple.css" type="text/css" disabled>
-    <link rel="stylesheet" title="red" class="alternate-style" href="red.css" type="text/css" disabled>
-    <link rel="stylesheet" title="yellow" class="alternate-style" href="yellow.css" type="text/css" disabled>
-    <link rel="stylesheet" title="green" class="alternate-style" href="green.css" type="text/css" disabled>
-    <link rel="stylesheet" title="blue" class="alternate-style" href="blue.css" type="text/css" disabled>
+    <link rel="stylesheet" title="purple" class="alternate-style" href="./assets/style/purple.css" type="text/css" disabled>
+    <link rel="stylesheet" title="red" class="alternate-style" href="./assets/style/red.css" type="text/css" disabled>
+    <link rel="stylesheet" title="yellow" class="alternate-style" href="./assets/style/yellow.css" type="text/css" disabled>
+    <link rel="stylesheet" title="green" class="alternate-style" href="./assets/style/green.css" type="text/css" disabled>
+    <link rel="stylesheet" title="blue" class="alternate-style" href="./assets/style/blue.css" type="text/css" disabled>
     <!-- Theme Switcher End -->
-    <link rel="stylesheet" href="themeSwitcher.css" type="text/css">
+    <link rel="stylesheet" href="./assets/style/themeSwitcher.css" type="text/css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
@@ -430,11 +430,11 @@
     </div>
     <!-- Theme Switcher End -->
     <!-- Template Js -->
-    <script src="script.js">
+    <script src="./assets/script/script.js">
 
     </script>
       <!-- JavaScript for Theme Switcher -->
-      <script src="themeSwitcher.js">
+      <script src="./assets/script/themeSwitcher.js">
 
       </script>
     <!-- JavaScript for Theme Switcher End -->
