Fix: Navigation tag changed + CSS

--- a/index.html
+++ b/index.html
@@ -39,12 +39,14 @@
         </div>
         <!-- Logo End -->
         <!-- Navbar -->
-        <ul class="nav">
+        <nav class="nav">
+        <ul>
           <li><a href="#home" class="active"> Home </a></li>
           <li><a href="#about"> About Me</a></li>
           <li><a href="#projects"> Projects </a></li>
           <li><a href="#contact"> Contact </a></li>
         </ul>
+        </nav>
         <!-- Navbar End -->
         <!-- Copyright -->
         <div class="copyright-text">
