Fix: Replace div by HTML5 Footer tag

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
         </nav>
         <!-- Navbar End -->
         <!-- Copyright -->
-        <div class="copyright-text">
-          &copy; 2021 Pushpa Kumari
-        </div>
+        <footer>
+         <small> &copy; 2021 Pushpa Kumari</small>
+        </footer>
         <!-- Copyright End -->
       </div>
       </div>
