Fix: Fixed AboutUs Heading

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
               <div class="about-content padd-15">
                 <div class="row">
                   <div class="about-text padd-15">
-                    <h3><span>Hello There!</span></h3>
+                    <h3>Hello There!</h3>
                     <p>My name is Pushpa Kumari. I am currently pursuing my Bachelor Of Technology in Computer Science & Engineering
                       from Maulana Abul Kalam Azad University Of Technology, West Bengal. I am from Kolkata, West Bengal. Currently,
                       I am working at RC Diamonds as a Web Development intern. I’m interested in learning more about Web Development
